--- a/index.html
+++ b/index.html
@@ -71,9 +71,59 @@
                 </div>
             </div>
             <div class="hero-visual">
-                <div class="tornado-visualization">
-                    <div class="tornado-cone"></div>
-                    <div class="debris-particles"></div>
+                <div class="data-dashboard">
+                    <div class="dashboard-header">
+                        <div class="dashboard-title">Real-Time Risk Monitor</div>
+                        <div class="dashboard-subtitle">Current Tornado Risk Levels</div>
+                    </div>
+                    <div class="risk-meters">
+                        <div class="risk-meter">
+                            <div class="meter-label">
+                                <span class="meter-location">Tampa Bay, FL</span>
+                                <span class="meter-value">High</span>
+                            </div>
+                            <div class="meter-bar">
+                                <div class="meter-fill high" style="width: 0%;" data-width="78%"></div>
+                            </div>
+                        </div>
+                        <div class="risk-meter">
+                            <div class="meter-label">
+                                <span class="meter-location">Moore, OK</span>
+                                <span class="meter-value">Critical</span>
+                            </div>
+                            <div class="meter-bar">
+                                <div class="meter-fill high" style="width: 0%;" data-width="95%"></div>
+                            </div>
+                        </div>
+                        <div class="risk-meter">
+                            <div class="meter-label">
+                                <span class="meter-location">Topeka, KS</span>
+                                <span class="meter-value">Moderate</span>
+                            </div>
+                            <div class="meter-bar">
+                                <div class="meter-fill moderate" style="width: 0%;" data-width="62%"></div>
+                            </div>
+                        </div>
+                        <div class="risk-meter">
+                            <div class="meter-label">
+                                <span class="meter-location">Austin, TX</span>
+                                <span class="meter-value">Low</span>
+                            </div>
+                            <div class="meter-bar">
+                                <div class="meter-fill low" style="width: 0%;" data-width="34%"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="risk-indicators">
+                        <div class="risk-indicator">
+                            <i class="fas fa-exclamation-triangle indicator-icon warning"></i>
+                            <div class="indicator-text">Active Warnings</div>
+                        </div>
+                        <div class="risk-indicator">
+                            <i class="fas fa-satellite-dish indicator-icon info"></i>
+                            <div class="indicator-text">Live Monitoring</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
